# OPK

./: README.md
CV2/: CMakeLists.txt
CV2/lib/: CMakeLists.txt  Canvas.cpp  Shape.cpp
CV2/lib/include/: Canvas.hpp  Shape.hpp
CV2/src/: main.cpp
CV3/cv3_verzia_cvicenie/: CMakeLists.txt  main.cpp
CV3/cv3_verzia_cvicenie/include/fifo_lib/: camera_frame.hpp  error_codes.hpp  frame_fifo.hpp  list_node.hpp
CV3/cv3_verzia_cvicenie/src/fifo_lib/: CMakeLists.txt  camera_frame.cpp  frame_fifo.cpp  list_node.cpp
CV3/cv3_verzia_cvicenie/tests/: CMakeLists.txt  tests.cpp
zadanie1/: CMakeLists.txt
zadanie1/include/: Environment.h  Trajectory.hpp
zadanie1/src/: Robot.cpp  Trajectory.cpp
